--- a/services/nodejs/apps/.env.template
+++ b/services/nodejs/apps/.env.template
@@ -1,45 +1,27 @@
 PORT=3000
 NODE_ENV=development
 LOG_LEVEL=debug
-
-ALLOWED_ORIGINS=
-SECRET_KEY=your-encryption-secret
-COOKIE_SECRET_KEY=cookie-secret-saml-sso
-
+ALLOWED_ORIGINS=http://localhost:3001
+SECRET_KEY=my-secret
+FRONTEND_PUBLIC_URL=http://localhost:3001
 QUERY_BACKEND=http://localhost:8000
 CONNECTOR_BACKEND=http://localhost:8088
 CONNECTOR_PUBLIC_BACKEND=
 INDEXING_BACKEND=http://localhost:8091
-
-# Azure AD Oauth Login
-AZURE_CLIENT_ID=
-AZURE_TENANT_ID=common
-
-# Google OAuth Login
-GOOGLE_CLIENT_ID=
-
-MONGO_URI=
-
-
+ETCD_URL=http://localhost:2379
+ETCD_HOST=localhost
 ARANGO_URL=http://localhost:8529
+ARANGO_DB_NAME=es
 ARANGO_USERNAME=root
 ARANGO_PASSWORD=your_password
-
-# Todo: Needs cleanup
-REDIS_HOST=
-REDIS_PORT=
+KAFKA_BROKERS=localhost:9092
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_PASSWORD=
-REDIS_TLS=
-
-ETCD_URL=localhost:2379
-
-ETCD_USERNAME=
-ETCD_PASSWORD=
-ETCD_TLS_ENABLED=FALSE
-
-KAFKA_BROKERS=
-
+REDIS_URL=redis://:hello123@localhost:6379
+MONGO_URI=mongodb://admin:password@localhost:27019/
+MONGO_DB_NAME=enterprise-search
 QDRANT_API_KEY=your_qdrant_api_key
 QDRANT_HOST=localhost
-QDRANT_PORT=6333
 QDRANT_GRPC_PORT=6334
+QDRANT_PORT=6333
